new-year-offer-commingsoon

--- a/index.html
+++ b/index.html
@@ -38,5 +38,34 @@
         </div>
     </div>
 </section>
+<!-- This is hotel place space  -->
+<section class="join-now-section">
+    <div class="details-box">
+        <h3 class="details-title-1"><span>Place:</span> New Park Hotel</h3>
+        <h3 class="details-title-2"><span>Date:</span> 31 December Night 2023</h3>
+        <h3 class="details-title-3"><span>Time:</span> Evening 7:30 Pm to 12:30 Am</h3>
+        <button class="join-btn-hotel-details">Join Now</button>
+    </div>
+</section>
+<!--  -->
+<section>
+    <div class="comming-soon-division">
+        <div>
+            <h2>NEW BEST OFFER</h2>
+            <h1>Coming Soon</h1>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie 
+                malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
+           </p>
+        </div>
+        <div>
+            <img src="/images/Ellipse 1.png" alt="">
+        </div>
+        <div> 
+            <h2>2024</h2>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+            <img src="/images/Group 96.png" alt="">
+        </div>
+    </div>
+</section>
 </body>
 </html>
