update new section

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
 <!--  -->
 <section>
     <div class="comming-soon-division">
-        <div>
+        <div class="offer-box-1">
             <h2>NEW BEST OFFER</h2>
             <h1>Coming Soon</h1>
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie 
                 malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
            </p>
         </div>
-        <div>
+        <div class="offer-box-2">
             <img src="/images/Ellipse 1.png" alt="">
         </div>
-        <div> 
+        <div class="offer-box-3"> 
             <h2>2024</h2>
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
             <img src="/images/Group 96.png" alt="">
