added some picture and holiday section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new-year-new-me</title>
     <link rel="stylesheet" href="/CSS/style.css">
 </head>
+
 <body>
     <header class="header">
         <div class="header-content">
@@ -13,59 +15,83 @@
             <h1 class="header-title">New Year Party <br> Celebration</h1>
         </div>
     </header>
-<!-- This is Offer Section  -->
- <section class="new-year-offer">
-    <div class="new-year-offer-box">
-        <h1 class="how-much-offer">65% OFF</h1>
-        <small class="offer-title">OUR HOLIDAY DEALS ARE BETTER</small>
-        <h3 class="offer-category">ALL CATEGORIES</h3>
-        <div class="offer-image">
-            <img src="/images/New Year Photo.png" alt="">
+    <!-- This is Offer Section  -->
+    <section class="new-year-offer">
+        <div class="new-year-offer-box">
+            <h1 class="how-much-offer">65% OFF</h1>
+            <small class="offer-title">OUR HOLIDAY DEALS ARE BETTER</small>
+            <h3 class="offer-category">ALL CATEGORIES</h3>
+            <div class="offer-image">
+                <img src="/images/New Year Photo.png" alt="">
+            </div>
         </div>
-    </div>
- </section>
-<!-- This is midperty part  -->
-<section class="midbox-main">
-    <div class="midbox">
-        <div class="">
-            <h1 class="midbox-title">Welcome to <br/> midnight party</h1>
-            <p class="midbox-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum 
-              sed sodales risus ut pellentesque vel euismod. </p>
-            <button class="join-btn">Join Now</button>
+    </section>
+    <!-- This is midperty part  -->
+    <section class="midbox-main">
+        <div class="midbox">
+            <div class="">
+                <h1 class="midbox-title">Welcome to <br /> midnight party</h1>
+                <p class="midbox-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum
+                    sed sodales risus ut pellentesque vel euismod. </p>
+                <button class="join-btn">Join Now</button>
+            </div>
+            <div class="midbox-img">
+                <img src="/images/Group 70.png" alt="">
+            </div>
         </div>
-        <div class="midbox-img">
-            <img src="/images/Group 70.png" alt="">
+    </section>
+    <!-- This is hotel place space  -->
+    <section class="join-now-section">
+        <div class="details-box">
+            <h3 class="details-title-1"><span>Place:</span> New Park Hotel</h3>
+            <h3 class="details-title-2"><span>Date:</span> 31 December Night 2023</h3>
+            <h3 class="details-title-3"><span>Time:</span> Evening 7:30 Pm to 12:30 Am</h3>
+            <button class="join-btn-hotel-details">Join Now</button>
         </div>
-    </div>
-</section>
-<!-- This is hotel place space  -->
-<section class="join-now-section">
-    <div class="details-box">
-        <h3 class="details-title-1"><span>Place:</span> New Park Hotel</h3>
-        <h3 class="details-title-2"><span>Date:</span> 31 December Night 2023</h3>
-        <h3 class="details-title-3"><span>Time:</span> Evening 7:30 Pm to 12:30 Am</h3>
-        <button class="join-btn-hotel-details">Join Now</button>
-    </div>
-</section>
-<!--  -->
-<section>
-    <div class="comming-soon-division">
-        <div class="offer-box-1">
-            <h2>NEW BEST OFFER</h2>
-            <h1>Coming Soon</h1>
-            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie 
-                malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
-           </p>
+    </section>
+    <!--  -->
+    <section>
+        <div class="comming-soon-division">
+            <div class="offer-box-1">
+                <h2>NEW BEST OFFER</h2>
+                <h1>Coming Soon</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                    malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.
+                </p>
+            </div>
+            <div class="offer-box-2">
+                <img src="/images/Ellipse 1.png" alt="">
+            </div>
+            <div class="offer-box-3">
+                <h2>2024</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img src="/images/Group 96.png" alt="">
+            </div>
         </div>
-        <div class="offer-box-2">
-            <img src="/images/Ellipse 1.png" alt="">
+    </section>
+    <!-- This is holidays section  -->
+    <section class="holidays-section"> 
+        <div class="holidays-main-container">  
+            <div class="holidays-subtitle">
+                <h3>WHAT IS FUNCTIONAL</h3>
+                <h1><span>Holidays</span> Sale 50%</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc 
+                    purus quam id
+                    fermentum amet amet sit consectetur.
+                </p>
+            </div>
+            <div class="holidays-picture-container">
+                <div class="holidays-happy-picture">
+                    <img src="/images/Group 75.png" alt="">
+                </div>
+                <div class="holidays-happy-picture2">
+                    <img src="/images/Group 44.png" alt="">
+                </div>
+            </div>         
         </div>
-        <div class="offer-box-3"> 
-            <h2>2024</h2>
-            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
-            <img src="/images/Group 96.png" alt="">
-        </div>
-    </div>
-</section>
+    </section>
 </body>
+
 </html>
