added portfolio section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,32 @@
             </div>         
         </div>
     </section>
+<!-- This is portfolio section  -->
+ <section class="port-section">
+    <div>
+        <div class="port-details">
+            <h3>THE BEST GIFTS</h3>
+            <h2>Our Awesome Portfolio</h2>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum 
+            sed sodales risus ut pellentesque vel euismod. 
+        </p>
+        </div>
+        <div class="gid-container">
+            <div class="grid-system">
+                <img src="/images/Rectangle 3.png" alt="">
+                <img src="/images/Rectangle 4.png" alt="">
+                <img src="/images/Rectangle 5.png" alt="">
+                <img src="/images/Rectangle 7.png" alt="">
+            </div>
+            <div class="grid-system">
+                <img src="/images/Rectangle 6.png" alt="">
+                <img src="/images/Rectangle 7.png" alt="">
+                <img src="/images/Rectangle 8.png" alt="">
+                <img src="/images/Rectangle 4.png" alt="">
+            </div>
+        </div>
+    </div>
+ </section>
 </body>
 
 </html>
