--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
         </div>
         <div class="gid-container">
             <div class="grid-system">
-                <img src="/images/Rectangle 3.png" alt="">
-                <img src="/images/Rectangle 4.png" alt="">
-                <img src="/images/Rectangle 5.png" alt="">
-                <img src="/images/Rectangle 7.png" alt="">
+                <img src="./images/Rectangle 5.png" alt="">
+                <img src="./images/Rectangle 3.png" alt="">
+                <img src="./images/Rectangle 7.png" alt="">
+                <img src="./images/Rectangle 6.png" alt="">
             </div>
             <div class="grid-system">
-                <img src="/images/Rectangle 6.png" alt="">
-                <img src="/images/Rectangle 7.png" alt="">
-                <img src="/images/Rectangle 8.png" alt="">
-                <img src="/images/Rectangle 4.png" alt="">
+                <img src="./images/Rectangle 5.png" alt="">
+                <img src="./images/Rectangle 5.png" alt="">
+                <img src="./images/Rectangle 7.png" alt="">
+                <img src="./images/Rectangle 8.png" alt="">
             </div>
         </div>
     </div>
